samples/_failures_safe/1761663700_68feaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afe976c0.c: In function ‘matrix_input’:
./samples/SAFE/__tmp_afe976c0.c:123:13: error: expected declaration or statement at end of input
  123 |             char prompt[64];
      |             ^~~~
./samples/SAFE/__tmp_afe976c0.c:123:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_afe976c0.c:123:13: error: expected declaration or statement at end of input
